# mnemosyne

./: .gitignore  LICENSE  PROJECT_STATE_REPORT.md  README.md  V2_FREEZE_DECLARATION.md  app.py  brute_log.txt  debug_discovery_brute.py  debug_genai.py  debug_genai_models.py  debug_genai_v2.py  debug_imagen.py  debug_ocr.py  debug_safety.txt  debug_safety_2.txt  debug_stress.txt  debug_v2.txt  debug_v2_success.txt  debug_v3.txt  demo_output_assumptions.txt  experiment_output.txt  list_models.py  main.py  main_visual_test.py  pyproject.toml  raw_comments.json  run_ab_experiment.py  run_sandbox_demo.py  run_stress_test.py  run_verification.py  task.md  verify_poc_headless.py  verify_web_poc.py  walkthrough.md
sandbox/: decomposer.py  executor.py  experiment.py  gemini_client.py  prompt_compiler.py
storage/: assumptions.json  loops.json  narratives.json  organizations.json  prototype_db.json
storage_demo/: contradictions.json  insights.json  narratives.json  organizations.json  strategy_changes.json
storage_poc/: assumptions.json  narratives.json  organizations.json
storage_poc_verify/: assumptions.json  narratives.json  organizations.json
storage_safety_demo/: assumptions.json  contradictions.json  narratives.json
storage_stress_test/: assumptions.json  contradictions.json
storage_v0_final/: assumptions.json  contradictions.json  insights.json  narratives.json  strategy_changes.json
storage_v1_final/: assumptions.json  contradictions.json  narratives.json  organizations.json
storage_v2_demo/: assumptions.json
storage_v3_demo/: overrides.json
(+28 files in other folders)
