[project]
name = "mnemosyne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
